Bug 300245 - mplayer2 loses keyboard input after switching to fullscreen
Summary: mplayer2 loses keyboard input after switching to fullscreen
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: core (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: 4.9 Beta 1
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-18 13:12 UTC by miklos
Modified: 2012-05-27 19:43 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.4
Sentry Crash Report:
thomas.luebking: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description miklos 2012-05-18 13:12:53 UTC
After switching to fullscreen (f), keyboard input goes to the previously active window (in my case usually the terminal where I started the video playback). If I press alt-tab once, the mplayer fullscreen window is selected, and it gets the keyboard focus.

kde 4.7.4 (debian unstable), focus model is 'focus follows mouse', focus stealing prevention level 'low'

Might be related: debian bug #662070
Might be related: wine windows only receive the first keypress, which gets repeated until alt-tab-ing to an other window and back

Reproducible: Always
Comment 1 Thomas Lübking 2012-05-18 16:59:50 UTC
https://git.reviewboard.kde.org/r/104985/
Comment 2 Thomas Lübking 2012-05-18 17:07:54 UTC
Git commit fde8794962124f3dbfab23d450f19d3c8a7d273c by Thomas Lübking.
Committed on 18/05/2012 at 19:06.
Pushed by luebking into branch 'master'.

updateFocusMousePosition when exiting fullscreen mode

REVIEW: 104985
FIXED-IN: 4.9

M  +3    -1    kwin/geometry.cpp

http://commits.kde.org/kde-workspace/fde8794962124f3dbfab23d450f19d3c8a7d273c
Comment 3 miklos 2012-05-20 23:08:45 UTC
Hi,

is there a chance this fix gets backported to the 4.8 series (I don't think 4.9 will land in debian before the freeze of wheezy)?

Thanks for the fast response btw.
Comment 4 Thomas Lübking 2012-05-27 19:43:35 UTC
Git commit b6081d623550aa2d1145d3b3b5ceafbc119e12eb by Thomas Lübking.
Committed on 18/05/2012 at 19:06.
Pushed by luebking into branch 'KDE/4.8'.

updateFocusMousePosition when exiting fullscreen mode

REVIEW: 104985
FIXED-IN: 4.8.4
(cherry picked from commit fde8794962124f3dbfab23d450f19d3c8a7d273c)

M  +3    -1    kwin/geometry.cpp

http://commits.kde.org/kde-workspace/b6081d623550aa2d1145d3b3b5ceafbc119e12eb