updateFocusMousePosition when exiting fullscreen mode

REVIEW: 104985
BUG: 300245
FIXED-IN: 4.9